# simpler

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  ci.py  ci.sh  conftest.py  pyproject.toml
.claude/rules/: architecture.md  discipline.md  doc-consistency.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/multi-repo-qwen-setup/: SKILL.md
.claude/skills/multi-repo-setup/: SKILL.md
.github/workflows/: ci.yml  sanitizers.yml
docs/: ci.md  developer-guide.md  distributed_level_runtime.md  getting-started.md  hierarchical_level_runtime.md  orchestrator.md  python-packaging.md  remote-l3-worker-design.md  roadmap.md  sanitizers.md  scheduler.md  sim_multi_device_isolation.md  task-flow.md  worker-manager.md
docs/dfx/: args-dump.md  dep_gen.md  dfx-buffer-capacity-audit.md  l2-swimlane-profiling.md  l2-timing.md  tensor-dump.md
docs/investigations/: 2026-06-a5-aicpu-filter-gate-scenario-b-validation.md  README.md
docs/remote-l3-worker-design/: buffers-and-transports.md  implementation-plan.md  implementation-record.md  pr-split-and-audit-artifacts.md  pr-split-and-audit-plan.md  protocol.md
example/: main.py
example/kernels/orchestration/: example_orch.cpp  example_orch.h
examples/a2a3/aicpu_build_graph/bgemm/: golden.py
examples/a2a3/aicpu_build_graph/vector_example/: golden.py
examples/a2a3/host_build_graph/bgemm/: golden.py
examples/a2a3/host_build_graph/matmul/: golden.py
examples/a2a3/host_build_graph/paged_attention/: golden.py
examples/a2a3/host_build_graph/vector_example/: golden.py
examples/a2a3/tensormap_and_ringbuffer/async_notify_demo/: test_async_notify_demo.py
examples/a2a3/tensormap_and_ringbuffer/batch_paged_attention/: golden.py
examples/a2a3/tensormap_and_ringbuffer/benchmark_bgemm/: test_benchmark_bgemm.py
examples/a2a3/tensormap_and_ringbuffer/bgemm/: golden.py
examples/a2a3/tensormap_and_ringbuffer/deferred_notify_demo/: test_deferred_notify_demo.py
examples/a2a3/tensormap_and_ringbuffer/mixed_example/: golden.py
examples/a2a3/tensormap_and_ringbuffer/paged_attention/: test_paged_attention.py
examples/a2a3/tensormap_and_ringbuffer/paged_attention_manual_scope/: test_paged_attention.py
examples/a2a3/tensormap_and_ringbuffer/paged_attention_ringbuffer/: test_paged_attention_ringbuffer.py
examples/a2a3/tensormap_and_ringbuffer/paged_attention_unroll_manual_scope/: test_paged_attention_unroll.py
examples/a2a3/tensormap_and_ringbuffer/qwen3_14b_decode/: test_qwen3_14b_decode.py
examples/a2a3/tensormap_and_ringbuffer/scalar_data_test/: test_scalar_data.py
examples/a2a3/tensormap_and_ringbuffer/sdma_async_completion_demo/: test_sdma_async_completion_demo.py
examples/a2a3/tensormap_and_ringbuffer/vector_example/: golden.py  test_vector_example.py
examples/a5/tensormap_and_ringbuffer/async_notify_demo/: test_async_notify_demo.py
examples/a5/tensormap_and_ringbuffer/bgemm/: test_bgemm.py
examples/a5/tensormap_and_ringbuffer/deferred_notify_demo/: test_deferred_notify_demo.py
examples/a5/tensormap_and_ringbuffer/paged_attention/: golden.py  test_paged_attention.py
examples/a5/tensormap_and_ringbuffer/paged_attention_manual_scope/: test_paged_attention.py
examples/a5/tensormap_and_ringbuffer/paged_attention_unroll_manual_scope/: test_paged_attention_unroll.py
examples/a5/tensormap_and_ringbuffer/vector_example/: test_vector_example.py
examples/host_build_graph/vector_example/: README.md
examples/host_build_graph_example/: README.md  golden.py
examples/host_build_graph_sim_example/: README.md  golden.py
examples/host_build_graph_sim_example/kernels/aiv/: kernel_add.cpp  kernel_add_scalar.cpp  kernel_mul.cpp
examples/paged_attention/: README.md
examples/paged_attention/kernels/aic/: aic_pv_matmul.cpp  aic_qk_matmul.cpp
examples/paged_attention/kernels/aiv/: aiv_online_update.cpp  aiv_softmax_prepare.cpp
examples/scripts/: README.md  code_runner.py  run_example.py
examples/tensormap_and_ringbuffer/alternating_matmul_add/: golden.py
examples/workers/l2/per_task_runtime_env/: README.md  main.py  test_per_task_runtime_env.py
examples/workers/l2/vector_add/: main.py
golden/: paged_attention_golden.py
python/: bindings.py  pto_compiler.py  runtime_bindings.py  runtime_builder.py  task_interface.py  worker.py
python/bindings/: CMakeLists.txt  dist_worker_bind.h  task_interface.cpp
python/simpler/: task_interface.py  worker.py
simpler_setup/: __init__.py  build_runtimes.py  code_runner.py  environment.py  kernel_compiler.py  pto_isa.py  runtime_compiler.py  scene_test.py
simpler_setup/tools/: README.md  __init__.py  device_log_resolver.py  device_log_timing.py  dump_viewer.py
src/common/distributed/: dist_chip_process.cpp  dist_chip_process.h  dist_orchestrator.cpp  dist_orchestrator.h  dist_ring.cpp  dist_ring.h  dist_scheduler.cpp  dist_scheduler.h  dist_scope.cpp  dist_scope.h  dist_sub_worker.cpp  dist_sub_worker.h  dist_tensormap.cpp  dist_tensormap.h  dist_types.cpp  dist_types.h  dist_worker.cpp  dist_worker.h
src/common/task_interface/: arg_direction.h  call_config.h  callable.h  data_type.h  task_args.h  tensor_arg.h
src/common/worker/: chip_worker.cpp  chip_worker.h  pto_runtime_c_api.h
src/runtime/aicpu/: runtimeexecutor.cpp
tests/: conftest.py  test_runtime_builder.py
tests/lint/: clang_tidy.py
tests/st/: conftest.py  test_worker_api.py
tests/st/aicore_op_timeout/: test_aicore_op_timeout.py
tests/ut/cpp/: CMakeLists.txt  test_dist_orchestrator.cpp  test_dist_ring.cpp  test_dist_scheduler.cpp  test_dist_scope.cpp  test_dist_tensormap.cpp
tests/ut/cpp/a2a3/: test_scheduler_state.cpp  test_wiring.cpp
tests/ut/cpp/a5/: test_orchestrator_fanin.cpp  test_scheduler_state.cpp  test_wiring.cpp
tests/ut/cpp/types/: test_call_config.cpp  test_chip_callable_upload_immutable.cpp
tests/ut/py/: conftest.py  test_chip_worker.py  test_device_log_timing.py  test_hostsub_fork_shm.py  test_task_interface.py
tools/: benchmark_rounds.sh  swimlane_converter.py  verify_packaging.sh
(+432 files in other folders)
